2004-10-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: use CurrentExecutionFilePath instead of
	FilePath. Fixes bug #67982.

2004-08-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: fix bug when processing empty location
	tags. Closes bug #63001.

2004-08-02  Duncan Mak  <duncan@ximian.com>

	* AuthorizationRuleAction.cs:
	* BuildProviderAppliesTo.cs:
	* CustomErrorsMode.cs:
	* MachineKeyValidation.cs:
	* PagesEnableSessionState.cs:
	* PagesToCountAction.cs:
	* ProcessModelComAuthenticationLevel.cs:	
	* ProcessModelComImpersonationLevel.cs:
	* ProcessModelLogLevel.cs;
	* SerializationMode.cs:
	* TraceDisplayMode.cs: Added enumerations.

	* IRemoteWebConfigarationHostServer.cs: Added interface.

2004-06-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthorizationConfig.cs: really fix bug #60482. Thanks David!

2004-06-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthorizationConfig.cs: we must match [verb +] (role|user). Fixes bug
	#60482.

2004-06-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: allow empty <configSections>.

2004-06-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* GlobalizationConfigurationHandler.cs: if no culture given, use the
	default one, not the invariant.

2004-06-07  Alon Gazit <along@mainsoft.com>

	* HandlerFactoryConfiguration.cs: using cache to get performance
	improvement.
	

2004-06-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCapabilitiesBase.cs: set the useragent of the new
	HttpBrowserCapabilities object.

2004-06-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCapabilitiesBase.cs: ClientTarget takes precedence over UserAgent.

2004-06-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConfigurationSettings.cs: when the virtual path is not /, don't
	loop forever trying to read configuration from /. Fixes bug #59480.

2004-05-25  Gonzalo Paniagua Javier <gonzalo@ximian.com>
