@@ -1,3 +1,11 @@
+2004-11-15  Lluis Sanchez Gual <lluis@novell.com>
+
+	* AnonymousIdentificationSection.cs, InternalSection.cs,
+	AuthenticationSection.cs, AssemblyCollection.cs, AssemblyInfo.cs,
+	AdapterDictionary.cs: Implemented.
+	* PassportAuthentication.cs, FormsAuthenticationConfiguration.cs:
+	created classes.
+
 2004-10-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* WebConfigurationSettings.cs: use CurrentExecutionFilePath instead of
